--- a/doc/agile/sprint_backlog_98.org
+++ b/doc/agile/sprint_backlog_98.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-14 Tue 17:48]
+#+CAPTION: Clock summary at [2017-02-23 Thu 23:06]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *3:44* |      |      | 100.0 |
+| *Total time*                                                                | *7:34* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 3:44   |      |      | 100.0 |
-| Active                                                                      |        | 3:44 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:09 |   4.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:30 |  13.4 |
-| STARTED Implement the database model using Northwind                        |        |      | 3:05 |  82.6 |
+| Stories                                                                     | 7:34   |      |      | 100.0 |
+| Active                                                                      |        | 7:34 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:09 |   2.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:30 |   6.6 |
+| STARTED Implement the database model using Northwind                        |        |      | 6:55 |  91.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -81,7 +81,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://twitter.com/MarcoCraveiro/status/820962437465866241][Tweet]]
 
 *** STARTED Implement the database model using Northwind              :story:
-    CLOCK: [2017-02-14 Tue 18:16]
+    CLOCK: [2017-02-23 Thu 19:15]--[2017-02-23 Thu 23:05] =>  3:50
     CLOCK: [2017-02-14 Tue 06:33]--[2017-02-14 Tue 07:30] =>  0:57
     CLOCK: [2017-02-13 Mon 20:25]--[2017-02-13 Mon 22:33] =>  2:08
 
