--- a/doc/agile/sprint_backlog_98.org
+++ b/doc/agile/sprint_backlog_98.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-24 Fri 10:33]
-| <75>                                                                        |        |      |      |       |
-| Headline                                                                    | Time   |      |      |     % |
-|-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *9:39* |      |      | 100.0 |
-|-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 9:39   |      |      | 100.0 |
-| Active                                                                      |        | 9:39 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:09 |   1.6 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:30 |   5.2 |
-| STARTED Implement the database model using Northwind                        |        |      | 9:00 |  93.3 |
+#+CAPTION: Clock summary at [2017-02-24 Fri 12:39]
+| <75>                                                                        |         |       |       |       |
+| Headline                                                                    | Time    |       |       |     % |
+|-----------------------------------------------------------------------------+---------+-------+-------+-------|
+| *Total time*                                                                | *11:44* |       |       | 100.0 |
+|-----------------------------------------------------------------------------+---------+-------+-------+-------|
+| Stories                                                                     | 11:44   |       |       | 100.0 |
+| Active                                                                      |         | 11:44 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:09 |   1.3 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   4.3 |
+| STARTED Implement the database model using Northwind                        |         |       | 11:05 |  94.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -81,6 +81,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://twitter.com/MarcoCraveiro/status/820962437465866241][Tweet]]
 
 *** STARTED Implement the database model using Northwind              :story:
+    CLOCK: [2017-02-24 Fri 10:34]--[2017-02-24 Fri 12:39] =>  2:05
     CLOCK: [2017-02-24 Fri 09:01]--[2017-02-24 Fri 10:33] =>  1:32
     CLOCK: [2017-02-23 Thu 23:06]--[2017-02-23 Thu 23:39] =>  0:33
     CLOCK: [2017-02-23 Thu 19:15]--[2017-02-23 Thu 23:05] =>  3:50
