--- a/doc/agile/sprint_backlog_98.org
+++ b/doc/agile/sprint_backlog_98.org
@@ -13,21 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-24 Fri 12:39]
+#+CAPTION: Clock summary at [2017-02-24 Fri 13:16]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *11:44* |       |       | 100.0 |
+| *Total time*                                                                | *11:59* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 11:44   |       |       | 100.0 |
-| Active                                                                      |         | 11:44 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:09 |   1.3 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   4.3 |
-| STARTED Implement the database model using Northwind                        |         |       | 11:05 |  94.5 |
+| Stories                                                                     | 11:59   |       |       | 100.0 |
+| Active                                                                      |         | 11:59 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:24 |   3.3 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   4.2 |
+| STARTED Implement the database model using Northwind                        |         |       | 11:05 |  92.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-02-24 Fri 13:01]--[2017-02-24 Fri 13:16] =>  0:15
     CLOCK: [2017-02-13 Mon 11:55]--[2017-02-13 Mon 12:04] =>  0:09
 
 Updates to sprint and product backlog.
@@ -97,6 +98,52 @@ the base for the model.
 
 We should implement it using Oracle and use this to test the changes
 to ODB's oracle support.
+
+*** ODB Fixes to support Oracle                                       :story:
+
+At present we hard-coded quite a bit of the ODB profile just to allow
+it to work for postgres. However, this is now causing problems when we
+try to use oracle.
+
+We need to make the hard-coded parameters configurable via meta-data.
+
+#+begin_example
+modified   Src/XDatabase/CMakeLists.txt
+@@ -49,15 +49,16 @@ foreach(odb_file ${all_odb_files})
+         string(REPLACE "\\" "_" type_name ${type_name})
+         string(REPLACE "/" "_" type_name ${type_name})
++        set(pfh_dir "$ENV{PFH_LOCATION}")
+         set(target_name "codegen_XDatabase_odb_${type_name}")
+         add_custom_target(${target_name}
+             WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+-            COMMAND ${ODB_COMPILER}
++            COMMAND odb
+             --options-file ${CMAKE_CURRENT_SOURCE_DIR}/src/options.odb
+             --std c++11
+             --output-dir ${CMAKE_CURRENT_SOURCE_DIR}/include/Stockpile/XDatabase/odb/
+-            --odb-epilogue "\"#include \\\"Stockpile/XDatabase/odb/${odb_file}\"\\\""
+-            -I c:/home/local/cpp/include -I ${CMAKE_CURRENT_SOURCE_DIR}/include
++            --odb-epilogue '\#include \"Stockpile/XDatabase/odb/${odb_file}\"'
++            -I ${pfh_dir}/include -I ${CMAKE_CURRENT_SOURCE_DIR}/include
+             ${include_dir}/types/${type_name}.hpp)
+         add_dependencies(codegen_XDatabase_odb ${target_name})
+
+
+modified   Src/XDatabase/src/options.odb
+@@ -13,10 +13,11 @@
+# this material is strictly forbidden unless prior written permission is
+# obtained from the copyright holder.
+#
+---std c++11
++# enable C++11. FIXME: causes ODB crash in options file.
++# --std c++11
+-# target oracle
+---database oracle
++# target postgres
++--database pgsql
+ # use the boost profile
+--profile boost
+#+end_example
 
 *** Add ODB to the build machine                                      :story:
 
